updated structure and added js

--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,8 @@
     <title>Navbar</title>
     <link rel="stylesheet" href="cart.css" />
     <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -67,7 +69,7 @@
     </div>
     <div class="cart-summary">
       <h3>Total: $<span id="cart-total">0.00</span></h3>
-      <button id="checkout-btn">Checkout</button>
+      <button id="checkout-btn">Order Now</button>
     </div>
     <div id="pagination" class="pagination">
       <!-- Pagination buttons will be dynamically populated here -->
@@ -80,131 +82,10 @@
     <!--  -->
 
     <section id="sellers">
-      <div class="seller container">
-        <h2>Hot Sales</h2>
-        <div class="best-seller">
-          <div class="best-p1">
-            <img src="https://i.postimg.cc/jS7pSQLf/na4.png" alt="img" />
-            <div class="best-p1-txt">
-              <div class="name-of-p">
-                <p>PS England Shoes</p>
-              </div>
-              <div class="rating">
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-              </div>
-              <div class="price">
-                &dollar;37.24
-                <div class="colors">
-                  <i class="bx bxs-circle grey"></i>
-                  <i class="bx bxs-circle black"></i>
-                  <i class="bx bxs-circle blue"></i>
-                </div>
-              </div>
-              <div class="add-to-cart">
-                <button>
-                  <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Add to Cart</a
-                  >
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="best-p1">
-            <img src="https://i.postimg.cc/fbnB2yfj/na1.png" alt="img" />
-            <div class="best-p1-txt">
-              <div class="name-of-p">
-                <p>PS England T-Shirt</p>
-              </div>
-              <div class="rating">
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-              </div>
-              <div class="price">
-                &dollar;10.23
-                <div class="colors">
-                  <i class="bx bxs-circle blank"></i>
-                  <i class="bx bxs-circle blue"></i>
-                  <i class="bx bxs-circle brown"></i>
-                </div>
-              </div>
-              <div class="add-to-cart">
-                <button>
-                  <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Add to Cart</a
-                  >
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="best-p1">
-            <img src="https://i.postimg.cc/RhVP7YQk/hs1.png" alt="img" />
-            <div class="best-p1-txt">
-              <div class="name-of-p">
-                <p>PS England T-Shirt</p>
-              </div>
-              <div class="rating">
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-                <i class="bx bxs-star"></i>
-              </div>
-              <div class="price">
-                &dollar;15.24
-                <div class="colors">
-                  <i class="bx bxs-circle blank"></i>
-                  <i class="bx bxs-circle red"></i>
-                  <i class="bx bxs-circle blue"></i>
-                </div>
-              </div>
-              <div class="add-to-cart">
-                <button>
-                  <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Add to Cart</a
-                  >
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="best-p1">
-            <img src="https://i.postimg.cc/zD02zJq8/na2.png" alt="img" />
-            <div class="best-p1-txt">
-              <div class="name-of-p">
-                <p>PS England Bag</p>
-              </div>
-              <div class="rating">
-                <i class="bx bxs-star"></i>
-                <i class="bx bx-star"></i>
-                <i class="bx bx-star"></i>
-                <i class="bx bx-star"></i>
-                <i class="bx bx-star"></i>
-              </div>
-              <div class="price">
-                &dollar;09.28
-                <div class="colors">
-                  <i class="bx bxs-circle blank"></i>
-                  <i class="bx bxs-circle grey"></i>
-                  <i class="bx bxs-circle brown"></i>
-                </div>
-              </div>
-              <div class="add-to-cart">
-                <button>
-                  <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Add to Cart</a
-                  >
-                </button>
-              </div>
-            </div>
-          </div>
+        <div id="new-arrivals" class="seller container">
+          <h2>New Arrivals</h2>
+          <div class="best-seller"></div>
         </div>
-      </div>
     </section>
     <footer>
       <div class="footer-container container">
