--- a/cart.html
+++ b/cart.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar</title>
-    <link rel="stylesheet" href="cart.css" />
-    <link rel="stylesheet" href="style.css" />
+    <title>KongPosh</title>
+    <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
         <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
     <link
@@ -21,8 +21,9 @@
           <p>Free shipping, 30-day return or refund guarantee.</p>
         </div>
         <div class="sing_in_up">
-          <a href="# ">SIGN IN</a>
-          <a href="# ">SIGN UP</a>
+        <a href="# "><i class="bi bi-instagram"></i></a>
+        <a href="# "><i class="bi bi-facebook"></i></a>
+        <a href="# "><i class="bi bi-envelope-at-fill"></i></a>
         </div>
       </div>
     </section>
@@ -35,10 +36,10 @@
           <span class="line line3"></span>
         </div>
         <ul class="menu-items">
-          <li><a href="#home">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Shop</a></li>
-          <li><a href="#news">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <!-- <li><a href="#news">Blog</a></li>
+          <li><a href="#contact">Contact</a></li> -->
         </ul>
         <div class="logo">
           <img src="https://i.postimg.cc/TP6JjSTt/logo.webp" alt="" />
@@ -87,56 +88,45 @@
           <div class="best-seller"></div>
         </div>
     </section>
-    <footer>
-      <div class="footer-container container">
-        <div class="content_1">
-          <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="logo" />
-          <p>
-            The customer is at the heart of our<br />unique business model,
-            which includes<br />design.
-          </p>
-          <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards" />
-        </div>
-        <div class="content_2">
-          <h4>SHOPPING</h4>
-          <a href="#sellers">Clothing Store</a>
-          <a href="#sellers">Trending Shoes</a>
-          <a href="#sellers">Accessories</a>
-          <a href="#sellers">Sale</a>
-        </div>
-        <div class="content_3">
-          <h4>SHOPPING</h4>
-          <a href="./contact.html">Contact Us</a>
-          <a href="https://payment-method-sb.netlify.app/" target="_blank"
-            >Payment Method</a
-          >
-          <a href="https://delivery-status-sb.netlify.app/" target="_blank"
-            >Delivery</a
-          >
-          <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank"
-            >Return and Exchange</a
-          >
-        </div>
-        <div class="content_4">
-          <h4>NEWLETTER</h4>
-          <p>
-            Be the first to know about new<br />arrivals, look books, sales &
-            promos!
-          </p>
-          <div class="f-mail">
-            <input type="email" placeholder="Your Email" />
-            <i class="bx bx-envelope"></i>
+      <footer>
+        <div class="footer-container container">
+          <div class="content_1">
+            <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="logo">
+            <p>The customer is at the heart of our<br>unique business model, which includes<br>design.</p>
+            <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards">
           </div>
-          <hr />
+          <div class="content_2">
+            <h4>SHOPPING</h4>
+            <a href="#sellers">Clothing Store</a>
+            <a href="#sellers">Trending Shoes</a>
+            <a href="#sellers">Accessories</a>
+            <a href="#sellers">Sale</a>
+          </div>
+          <div class="content_3">
+            <h4>SHOPPING</h4>
+            <a href="#contact">Contact Us</a>
+            <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
+            <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery</a>
+            <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return and Exchange</a>
+          </div>
+          <div class="content_4">
+            <h4>NEWLETTER</h4>
+            <p>Be the first to know about new<br>arrivals, look books, sales & promos!</p>
+            <div class="f-mail">
+              <input type="email" placeholder="Your Email">
+              <i class='bx bx-envelope'></i>
+            </div>
+            <hr>
+          </div>
         </div>
-      </div>
-      <div class="f-design">
-        <div class="f-design-txt container">
-          <p>Design and Code by code.sanket</p>
+        <div class="f-design">
+          <div class="f-design-txt container">
+            <p>Design and Developed By <a href="">Musaib</a> and All rights Reserved By <a
+                href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script defer src="./cart.js"></script>
+    <script defer src="./js/cart.js"></script>
   </body>
 </html>
