--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    />
+    <title>KongPosh</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 
 </head>
 
@@ -21,8 +19,9 @@
                 <p>Free shipping, 30-day return or refund guarantee.</p>
             </div>
             <div class="sing_in_up ">
-                <a href="# ">SIGN IN</a>
-                <a href="# ">SIGN UP</a>
+            <a href="# "><i class="bi bi-instagram"></i></a>
+            <a href="# "><i class="bi bi-facebook"></i></a>
+            <a href="# "><i class="bi bi-envelope-at-fill"></i></a>
             </div>
         </div>
     </section>
@@ -67,145 +66,148 @@
             </div>
         </div>
     </section>
-<!-- <span id="cart-count">0</span> -->
-<section id="collection">
-    <div class="collections container"></div>
-<section >
-    <div id="sellers" class="seller container">
-        <h2>Top Sales</h2>
-        <div class="best-seller"></div>
-    </div>
-    <div id="new-arrivals" class="seller container">
-        <h2>New Arrivals</h2>
-        <div class="best-seller"></div>
-    </div>
-    <div id="hot-sales" class="seller container">
-        <h2>Hot Sales</h2>
-        <div class="best-seller"></div>
-    </div>
-</section>
-    <section id="news">
-        <div class="news-heading">
-            <p>LATEST NEWS</p>
-            <h2>Fashion New Trends</h2>
-        </div>
-        <div class="l-news container">
-            <div class="l-news1">
-                <div class="news1-img">
-                    <img src="https://i.postimg.cc/2y6wbZCm/news1.jpg" alt="img">
+    <!-- <span id="cart-count">0</span> -->
+    <section id="collection">
+        <div class="collections container"></div>
+        <section>
+            <div id="sellers" class="seller container">
+                <h2>Top Sales</h2>
+                <div class="best-seller"></div>
+            </div>
+            <div id="new-arrivals" class="seller container">
+                <h2>New Arrivals</h2>
+                <div class="best-seller"></div>
+            </div>
+            <div id="hot-sales" class="seller container">
+                <h2>Hot Sales</h2>
+                <div class="best-seller"></div>
+            </div>
+        </section>
+        <section id="news">
+            <div class="news-heading">
+                <p>LATEST NEWS</p>
+                <h2>Fashion New Trends</h2>
+            </div>
+            <div class="l-news container">
+                <div class="l-news1">
+                    <div class="news1-img">
+                        <img src="https://i.postimg.cc/2y6wbZCm/news1.jpg" alt="img">
+                    </div>
+                    <div class="news1-conte">
+                        <div class="date-news1">
+                            <p><i class='bx bxs-calendar'></i> 12 February 2022</p>
+                            <h4>What Curling Irons Are The Best Ones</h4>
+                            <a href="https://www.vogue.com/article/best-curling-irons" target="_blank">read more</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="news1-conte">
-                    <div class="date-news1">
-                        <p><i class='bx bxs-calendar'></i> 12 February 2022</p>
-                        <h4>What Curling Irons Are The Best Ones</h4>
-                        <a href="https://www.vogue.com/article/best-curling-irons" target="_blank">read more</a>
+                <div class="l-news2">
+                    <div class="news2-img">
+                        <img src="https://i.postimg.cc/9MXPK7RT/news2.jpg" alt="img">
+                    </div>
+                    <div class="news2-conte">
+                        <div class="date-news2">
+                            <p><i class='bx bxs-calendar'></i> 17 February 2022</p>
+                            <h4>The Health Benefits Of Sunglasses</h4>
+                            <a href="https://www.rivieraopticare.com/blog/314864-the-health-benefits-of-wearing-sunglasses_2/"
+                                target="_blank">read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="l-news3">
+                    <div class="news3-img">
+                        <img src="https://i.postimg.cc/x1KKdRLM/news3.jpg" alt="img">
+                    </div>
+                    <div class="news3-conte">
+                        <div class="date-news3">
+                            <p><i class='bx bxs-calendar'></i> 26 February 202</p>
+                            <h4>Eternity Bands Do Last Forever</h4>
+                            <a href="https://www.briangavindiamonds.com/news/eternity-bands-symbolize-love-that-lasts-forever/"
+                                target="_blank">read more</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="l-news2">
-                <div class="news2-img">
-                    <img src="https://i.postimg.cc/9MXPK7RT/news2.jpg" alt="img">
+        </section>
+        <section id="contact">
+            <div class="contact container">
+                <div class="map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d6619.265469434504!2d74.985473!3d33.950573!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDU3JzAyLjEiTiA3NMKwNTknMDcuNyJF!5e0!3m2!1sen!2sin!4v1729618387967!5m2!1sen!2sin"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="news2-conte">
-                    <div class="date-news2">
-                        <p><i class='bx bxs-calendar'></i> 17 February 2022</p>
-                        <h4>The Health Benefits Of Sunglasses</h4>
-                        <a href="https://www.rivieraopticare.com/blog/314864-the-health-benefits-of-wearing-sunglasses_2/"
-                            target="_blank">read more</a>
+                <form action="" method="POST" id="contactForm">
+                    <div class="form">
+                        <div class="form-txt">
+                            <h4>INFORMATION</h4>
+                            <h1>Contact Us</h1>
+                            <span>As you might expect of a company that began as a high-end interiors contractor, we pay
+                                strict
+                                attention.</span>
+                            <h3>USA</h3>
+                            <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
+                            <h3>India</h3>
+                            <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
+                        </div>
+                        <div class="form-details">
+                            <input type="text" name="name" id="name" placeholder="Name" required>
+                            <span id="nameError" class="error-message"></span> <!-- Error message for name -->
+
+                            <input type="email" name="email" id="email" placeholder="Email" required>
+                            <span id="emailError" class="error-message"></span> <!-- Error message for email -->
+
+                            <textarea name="message" id="message" cols="52" rows="7" placeholder="Message"
+                                required></textarea>
+                            <span id="messageError" class="error-message"></span> <!-- Error message for message -->
+
+                            <button type="button" id="sendBtn">SEND MESSAGE</button>
+                        </div>
                     </div>
-                </div>
+                </form>
+
             </div>
-            <div class="l-news3">
-                <div class="news3-img">
-                    <img src="https://i.postimg.cc/x1KKdRLM/news3.jpg" alt="img">
+        </section>
+        <footer>
+            <div class="footer-container container">
+                <div class="content_1">
+                    <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="logo">
+                    <p>The customer is at the heart of our<br>unique business model, which includes<br>design.</p>
+                    <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards">
                 </div>
-                <div class="news3-conte">
-                    <div class="date-news3">
-                        <p><i class='bx bxs-calendar'></i> 26 February 202</p>
-                        <h4>Eternity Bands Do Last Forever</h4>
-                        <a href="https://www.briangavindiamonds.com/news/eternity-bands-symbolize-love-that-lasts-forever/"
-                            target="_blank">read more</a>
+                <div class="content_2">
+                    <h4>SHOPPING</h4>
+                    <a href="#sellers">Clothing Store</a>
+                    <a href="#sellers">Trending Shoes</a>
+                    <a href="#sellers">Accessories</a>
+                    <a href="#sellers">Sale</a>
+                </div>
+                <div class="content_3">
+                    <h4>SHOPPING</h4>
+                    <a href="#contact">Contact Us</a>
+                    <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
+                    <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery</a>
+                    <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return and Exchange</a>
+                </div>
+                <div class="content_4">
+                    <h4>NEWLETTER</h4>
+                    <p>Be the first to know about new<br>arrivals, look books, sales & promos!</p>
+                    <div class="f-mail">
+                        <input type="email" placeholder="Your Email">
+                        <i class='bx bx-envelope'></i>
                     </div>
+                    <hr>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="contact container">
-            <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d6619.265469434504!2d74.985473!3d33.950573!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDU3JzAyLjEiTiA3NMKwNTknMDcuNyJF!5e0!3m2!1sen!2sin!4v1729618387967!5m2!1sen!2sin"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-<form action="" method="POST" id="contactForm">
-    <div class="form">
-        <div class="form-txt">
-            <h4>INFORMATION</h4>
-            <h1>Contact Us</h1>
-            <span>As you might expect of a company that began as a high-end interiors contractor, we pay strict
-                attention.</span>
-            <h3>USA</h3>
-            <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
-            <h3>India</h3>
-            <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
-        </div>
-        <div class="form-details">
-            <input type="text" name="name" id="name" placeholder="Name" required>
-            <span id="nameError" class="error-message"></span> <!-- Error message for name -->
-
-            <input type="email" name="email" id="email" placeholder="Email" required>
-            <span id="emailError" class="error-message"></span> <!-- Error message for email -->
-
-            <textarea name="message" id="message" cols="52" rows="7" placeholder="Message" required></textarea>
-            <span id="messageError" class="error-message"></span> <!-- Error message for message -->
-
-            <button type="button" id="sendBtn">SEND MESSAGE</button>
-        </div>
-    </div>
-</form>
-
-        </div>
-    </section>
-    <footer>
-        <div class="footer-container container">
-            <div class="content_1">
-                <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="logo">
-                <p>The customer is at the heart of our<br>unique business model, which includes<br>design.</p>
-                <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards">
-            </div>
-            <div class="content_2">
-                <h4>SHOPPING</h4>
-                <a href="#sellers">Clothing Store</a>
-                <a href="#sellers">Trending Shoes</a>
-                <a href="#sellers">Accessories</a>
-                <a href="#sellers">Sale</a>
-            </div>
-            <div class="content_3">
-                <h4>SHOPPING</h4>
-                <a href="./contact.html">Contact Us</a>
-                <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
-                <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery</a>
-                <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return and Exchange</a>
-            </div>
-            <div class="content_4">
-                <h4>NEWLETTER</h4>
-                <p>Be the first to know about new<br>arrivals, look books, sales & promos!</p>
-                <div class="f-mail">
-                    <input type="email" placeholder="Your Email">
-                    <i class='bx bx-envelope'></i>
+            <div class="f-design">
+                <div class="f-design-txt container">
+                    <p>Design and Developed By <a href="">Musaib</a> and All rights Reserved By <a
+                            href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
                 </div>
-                <hr>
             </div>
-        </div>
-        <div class="f-design">
-            <div class="f-design-txt container">
-                <p>Design and Code by code.sanket</p>
-            </div>
-        </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./main.js"></script>
+        </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="./js/main.js"></script>
 </body>
 
 
