--- a/products.html
+++ b/products.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
-    <link rel="stylesheet" href="style.css">
+    <title>KongPosh</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -18,8 +18,9 @@
                 <p>Free shipping, 30-day return or refund guarantee.</p>
             </div>
             <div class="sing_in_up ">
-                <a href="# ">SIGN IN</a>
-                <a href="# ">SIGN UP</a>
+                <a href="# "><i class="bi bi-instagram"></i></a>
+                <a href="# "><i class="bi bi-facebook"></i></a>
+                <a href="# "><i class="bi bi-envelope-at-fill"></i></a>
             </div>
         </div>
     </section>
@@ -44,10 +45,10 @@
     </nav>
 
     <section id="sellers">
-    <div id="sellers" class="seller container">
-        <h2>Top Sales</h2>
-        <div class="best-seller"></div>
-    </div>
+        <div id="sellers" class="seller container">
+            <h2>Top Sales</h2>
+            <div class="best-seller"></div>
+        </div>
     </section>
 
     <footer>
@@ -66,7 +67,7 @@
             </div>
             <div class="content_3">
                 <h4>SHOPPING</h4>
-                <a href="./contact.html">Contact Us</a>
+                <a href="#contact">Contact Us</a>
                 <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
                 <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery</a>
                 <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return and Exchange</a>
@@ -83,12 +84,13 @@
         </div>
         <div class="f-design">
             <div class="f-design-txt container">
-                <p>Design and Code by code.sanket</p>
+                <p>Design and Developed By <a href="">Musaib</a> and All rights Reserved By <a
+                        href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
             </div>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script defer src="./product.js"></script>
+    <script defer src="./js/product.js"></script>
 </body>
 
 
