--- a/cart.html
+++ b/cart.html
@@ -127,6 +127,6 @@
         </div>
       </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script defer src="./js/cart.js"></script>
+    <script defer src="./cart.js"></script>
   </body>
 </html>
