--- a/singleProduct.html
+++ b/singleProduct.html
@@ -125,7 +125,7 @@
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script deffer src="./js/singleProduct.js"></script>
+  <script deffer src="./singleProduct.js"></script>
 </body>
 
 </html>
