--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./js/main.js"></script>
+        <script deffer src="./main.js"></script>
 </body>
 
 
