--- a/products.html
+++ b/products.html
@@ -90,7 +90,7 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script defer src="./js/product.js"></script>
+    <script defer src="./product.js"></script>
 </body>
 
 
