--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
    
         <section >
             <div class="contact container">
+                    <div class="news-heading">
+                        <p>Find Us</p>
+                        <h2>Google Map</h2>
+                    </div>
                     <div class="map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d6619.265469434504!2d74.985473!3d33.950573!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDU3JzAyLjEiTiA3NMKwNTknMDcuNyJF!5e0!3m2!1sen!2sin!4v1729618387967!5m2!1sen!2sin"
