--- a/cart.html
+++ b/cart.html
@@ -11,16 +11,18 @@
   </head>
 
   <body>
-    <section class="top-txt">
-      <div class="head container">
+    <section class=" top-txt ">
+      <div class="head container ">
         <div class="head-txt">
-          <p>Free shipping, 30-day return or refund guarantee.</p>
+          <p>Contact us <a href="tel:+919541270349" target="_blank"><i class="bi bi-phone"></i> 7006541433</a></p>
         </div>
         <div class="sing_in_up">
-        <a href="# "><i class="bi bi-instagram"></i></a>
-        <a href="# "><i class="bi bi-facebook"></i></a>
-        <a href="# "><i class="bi bi-envelope-at-fill"></i></a>
+          <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
+              class="bi bi-instagram"></i></a>
+          <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+          <a href="mailto:kongposh06@gmail.com" target="_blank"><i class="bi bi-envelope-at-fill"></i></a>
         </div>
+    
       </div>
     </section>
     <nav class="navbar">
@@ -38,7 +40,7 @@
           <li><a href="#contact">Contact</a></li> -->
         </ul>
         <div class="logo">
-          <img src="https://i.postimg.cc/TP6JjSTt/logo.webp" alt="" />
+          <img src="../../assets/home/logo.ico" alt="" />
         </div>
       </div>
     </nav>
@@ -79,44 +81,62 @@
           <div class="best-seller"></div>
         </div>
     </section>
-      <footer>
-        <div class="footer-container container">
-          <div class="content_1">
-            <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="logo">
-            <p>The customer is at the heart of our<br>unique business model, which includes<br>design.</p>
-            <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards">
-          </div>
-          <div class="content_2">
-            <h4>SHOPPING</h4>
-            <a href="#sellers">Clothing Store</a>
-            <a href="#sellers">Trending Shoes</a>
-            <a href="#sellers">Accessories</a>
-            <a href="#sellers">Sale</a>
-          </div>
-          <div class="content_3">
-            <h4>SHOPPING</h4>
-            <a href="#contact">Contact Us</a>
-            <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
-            <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery</a>
-            <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return and Exchange</a>
-          </div>
-          <div class="content_4">
-            <h4>NEWLETTER</h4>
-            <p>Be the first to know about new<br>arrivals, look books, sales & promos!</p>
-            <div class="f-mail">
-              <input type="email" placeholder="Your Email">
-              <i class='bx bx-envelope'></i>
-            </div>
-            <hr>
-          </div>
+  <footer>
+    <div class="footer-container container">
+      <div class="content_1">
+        <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="Kashmir Dry Fruits Logo">
+        <p>Bringing you the finest selection of premium Kashmiri dry fruits, known for their unmatched quality and
+          authenticity. Our commitment to quality ensures you experience the true essence of Kashmir in every bite.</p>
+        <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="Accepted Payment Methods">
+      </div>
+  
+      <div class="content_2">
+        <h4>SHOP OUR COLLECTION</h4>
+        <a href="#sellers">Kashmiri Walnuts</a>
+        <a href="#sellers">Almonds & Saffron</a>
+        <a href="#sellers">Dried Fruits & Berries</a>
+        <a href="#sellers">Gift Boxes</a>
+      </div>
+  
+      <div class="content_3">
+        <h4>SUPPORT</h4>
+        <a href="#contact">Contact Us</a>
+        <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
+        <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery Information</a>
+        <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return & Exchange</a>
+      </div>
+  
+      <div class="content_4">
+        <h4>SUBSCRIBE TO OUR NEWSLETTER</h4>
+        <p>Stay updated on our latest offerings of authentic Kashmiri dry fruits, seasonal collections, and exclusive
+          discounts!</p>
+        <div class="f-mail">
+          <input type="email" placeholder="Your Email">
+          <i class='bx bx-envelope'></i>
         </div>
-        <div class="f-design">
-          <div class="f-design-txt container">
-            <p>Design and Developed By <a href="">Musaib</a> and All rights Reserved By <a
-                href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
-          </div>
-        </div>
-      </footer>
+        <hr>
+      </div>
+    </div>
+  
+    <div class="contact-info">
+      <div class="head-txt">
+        <p>Contact us <a href="tel:+919541270349"><i class="bi bi-phone"></i> 7006541433</a></p>
+      </div>
+      <div class="sing_in_up">
+        <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
+            class="bi bi-instagram"></i></a>
+        <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="mailto:kongposh06@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
+      </div>
+    </div>
+  
+    <div class="f-design">
+      <div class="f-design-txt container">
+        <p>Design and Developed By <a href="#">Musaib</a> | All rights reserved by <a href="https://duhasoftwares.com/"
+            target="_blank">Duha-Softwares</a></p>
+      </div>
+    </div>
+  </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="./cart.js"></script>
