--- a/cart.html
+++ b/cart.html
@@ -40,7 +40,7 @@
           <li><a href="#contact">Contact</a></li> -->
         </ul>
         <div class="logo">
-          <img src="../../assets/home/logo.png" alt="" />
+          <img src="./assets/home/logo.PNG" alt="" />
         </div>
       </div>
     </nav>
