--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="logo">
-                <img src="../../assets/home/logo.png" alt="not found">
+                <img src="./assets/home/logo.PNG" alt="not found">
             </div>
         </div>
     </nav>
