--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="home">
         <div class="home_page ">
             <div class="home_img ">
-                <img src="../../assets/home/home4.webp" alt="img" class="homeImg">
+                <img src="assets/home/home4.webp" alt="img" class="homeImg">
             </div>
             <div class="home_txt ">
             <p class="collection">Authentic Kashmiri Dry Fruits</p>
