--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class=" top-txt ">
         <div class="head container ">
         <div class="head-txt">
-            <p>Contact us <a href="tel:+919541270349" target="_blank"><i class="bi bi-phone"></i> 7006541433</a></p>
+            <p>Contact us @ <a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a></p>
         </div>
         <div class="sing_in_up">
             <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
@@ -93,25 +93,26 @@
                         <h2>Google Map</h2>
                     </div>
                     <div class="map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d6619.265469434504!2d74.985473!3d33.950573!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDU3JzAyLjEiTiA3NMKwNTknMDcuNyJF!5e0!3m2!1sen!2sin!4v1729618387967!5m2!1sen!2sin"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2581.340647608983!2d74.98309887571209!3d33.950589773195574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDU3JzAyLjEiTiA3NMKwNTknMDguNCJF!5e1!3m2!1sen!2sin!4v1730814492444!5m2!1sen!2sin"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                         <div id="contact"></div>
                 <form action="" method="POST" id="contactForm">
                     <div class="form">
-                        <div class="form-txt">
-                            <h4>INFORMATION</h4>
-                            <h1>Contact Us</h1>
-                            <span>As you might expect of a company that began as a high-end interiors contractor, we pay
-                                strict
-                                attention.</span>
-                            <h3>USA</h3>
-                            <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
-                            <h3>India</h3>
-                            <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
-                        </div>
+                    <div class="form-txt">
+                        <h4>INFORMATION</h4>
+                        <h1>Contact Us</h1>
+                        <span>Welcome to Kong Posh, your go-to destination for premium dry fruits and snacks. We offer the finest quality
+                            dried fruits, nuts, and more, ensuring that you enjoy fresh and flavorful products. Our commitment to quality
+                            and customer satisfaction is at the heart of everything we do.</span>
+                        <h3>India</h3>
+                        <p><a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a
+                                href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a></p>
+                        <h3>Our Location</h3>
+                        <p>Kammu And Kashmir Lethpora.<br>192122</p>
+                    </div>
                         <div class="form-details">
                             <input minlength="3" max="50" type="text" name="name" id="name"
                                 placeholder="Please Enter Your Name" required>
@@ -218,7 +219,8 @@
 
     <div class="contact-info">
         <div class="head-txt">
-            <p>Contact us <a href="tel:+919541270349"><i class="bi bi-phone"></i> 7006541433</a></p>
+            <p>Contact us <a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a href="tel:+917051807964"
+                target="_blank"><i class="bi bi-phone"></i> 7051807964</a</p>
         </div>
         <div class="sing_in_up">
             <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
