--- a/cart.html
+++ b/cart.html
@@ -13,9 +13,10 @@
   <body>
     <section class=" top-txt ">
       <div class="head container ">
-        <div class="head-txt">
-          <p>Contact us <a href="tel:+919541270349" target="_blank"><i class="bi bi-phone"></i> 7006541433</a></p>
-        </div>
+      <div class="head-txt">
+        <p>Contact us @ <a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a
+            href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a></p>
+      </div>
         <div class="sing_in_up">
           <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
               class="bi bi-instagram"></i></a>
