--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
 </head>
 
 <body>
-    <section class=" top-txt ">
-        <div class="head container ">
+   <section class="top-txt">
+    <div class="head container">
         <div class="head-txt">
-            <p>Contact us @ <a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a></p>
+            <p>
+                Contact us @ 
+                <a href="tel:+917006541433" target="_blank">
+                    <i class="bi bi-phone"></i> 7006541433
+                </a> 
+                || 
+                <a href="tel:+917051807964" target="_blank">
+                    <i class="bi bi-phone"></i> 7051807964
+                </a>
+            </p>
         </div>
-        <div class="sing_in_up">
-            <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
-                    class="bi bi-instagram"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-            <a href="mailto:kongposh06@gmail.com" target="_blank"><i class="bi bi-envelope-at-fill"></i></a>
+        <div class="sign_in_up">
+            <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a href="mailto:kongposh06@gmail.com" target="_blank">
+                <i class="bi bi-envelope-at-fill"></i>
+            </a>
         </div>
+    </div>
+</section>
 
-        </div>
-    </section>
     <nav class="navbar">
         <div class="navbar-container">
             <input type="checkbox" name="" id="checkbox">
@@ -217,18 +231,32 @@
         </div>
     </div>
 
-    <div class="contact-info">
-        <div class="head-txt">
-            <p>Contact us <a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a href="tel:+917051807964"
-                target="_blank"><i class="bi bi-phone"></i> 7051807964</a</p>
-        </div>
-        <div class="sing_in_up">
-            <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
-                    class="bi bi-instagram"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-            <a href="mailto:kongposh06@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
-        </div>
+   <div class="contact-info">
+    <div class="head-txt">
+        <p>
+            Contact us 
+            <a href="tel:+917006541433" target="_blank">
+                <i class="bi bi-phone"></i> 7006541433
+            </a> 
+            || 
+            <a href="tel:+917051807964" target="_blank">
+                <i class="bi bi-phone"></i> 7051807964
+            </a>
+        </p>
     </div>
+    <div class="sign_in_up">
+        <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank">
+            <i class="bi bi-instagram"></i>
+        </a>
+        <a href="#" target="_blank">
+            <i class="bi bi-facebook"></i>
+        </a>
+        <a href="mailto:kongposh06@gmail.com">
+            <i class="bi bi-envelope-at-fill"></i>
+        </a>
+    </div>
+</div>
+
 
     <div class="f-design">
         <div class="f-design-txt container">
