--- a/singleProduct.html
+++ b/singleProduct.html
@@ -1,154 +1,222 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>KongPosh</title>
+    <link rel="stylesheet" href="./styles/sp.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KongPosh</title>
-  <link rel="stylesheet" href="./styles/sp.css" />
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
-</head>
-
-<body>
-    <section class=" top-txt ">
-      <div class="head container ">
-      <div class="head-txt">
-        <p>Contact us @ <a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a
-            href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a></p>
-      </div>
-        <div class="sing_in_up">
-          <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
-              class="bi bi-instagram"></i></a>
-          <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-          <a href="mailto:kongposh06@gmail.com" target="_blank"><i class="bi bi-envelope-at-fill"></i></a>
+  <body>
+    <section class="top-txt">
+      <div class="head container">
+        <div class="head-txt">
+          <p>
+            Contact us @
+            <a href="tel:+917006541433" target="_blank">
+              <i class="bi bi-phone"></i> 7006541433
+            </a>
+            ||
+            <a href="tel:+917051807964" target="_blank">
+              <i class="bi bi-phone"></i> 7051807964
+            </a>
+          </p>
         </div>
-    
+        <div class="sign_in_up">
+          <a
+            href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm"
+            target="_blank"
+          >
+            <i class="bi bi-instagram"></i>
+          </a>
+          <a href="#" target="_blank">
+            <i class="bi bi-facebook"></i>
+          </a>
+          <a href="mailto:kongposh06@gmail.com" target="_blank">
+            <i class="bi bi-envelope-at-fill"></i>
+          </a>
+        </div>
       </div>
     </section>
-  <nav class="navbar">
-    <div class="navbar-container">
-      <input type="checkbox" name="" id="checkbox" />
-      <div class="hamburger-lines">
-        <span class="line line1"></span>
-        <span class="line line2"></span>
-        <span class="line line3"></span>
-      </div>
-      <ul class="menu-items">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Shop</a></li>
-        <li><a href="cart.html">Cart</a></li>
-        <!-- <li><a href="">Contact</a></li> -->
-      </ul>
-      <div class="logo">
-        <img src="assets/home/logo.PNG" alt="not found" />
-      </div>
-    </div>
-  </nav>
-  <!-- product start -->
-  <div class="singleProductContainer">
-    <div class="half1">
-      <img id="main-image" src="https://i.postimg.cc/8CmBZH5N/shoes.webp" width="100%" height="70%"
-        alt="Product Image" />
-    </div>
-    <div class="half2">
-      <div class="product p-4">
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex align-items-center" onclick="window.history.back();">
-            <i class="fa fa-long-arrow-left"></i>
-            <span class="ml-1">Back</span>
-          </div>
-          <!-- <i class="fa fa-shopping-cart text-muted"></i> -->
+
+    <nav class="navbar">
+      <div class="navbar-container">
+        <input type="checkbox" name="" id="checkbox" />
+        <div class="hamburger-lines">
+          <span class="line line1"></span>
+          <span class="line line2"></span>
+          <span class="line line3"></span>
         </div>
-        <div class="mt-4 mb-3">
-          <span class="text-uppercase text-muted brand" id="product-brand"></span>
-          <h5 class="text-uppercase name" id="product-name"></h5>
-          <div class="price d-flex flex-row align-items-center">
-            <span class="act-price" id="product-price">₹ </span>
-            <div class="ml-2">
-              <small class="dis-price" id="product-discount-price">₹</small>
-              <span id="discount-off" class="discount">₹</span>
+        <ul class="menu-items">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Shop</a></li>
+          <li><a href="cart.html">Cart</a></li>
+          <!-- <li><a href="">Contact</a></li> -->
+        </ul>
+        <div class="logo">
+          <img src="assets/home/logo.PNG" alt="not found" />
+        </div>
+      </div>
+    </nav>
+    <!-- product start -->
+    <div class="singleProductContainer">
+      <div class="half1">
+        <img
+          id="main-image"
+          src="https://i.postimg.cc/8CmBZH5N/shoes.webp"
+          width="100%"
+          height="70%"
+          alt="Product Image"
+        />
+      </div>
+      <div class="half2">
+        <div class="product p-4">
+          <div class="d-flex justify-content-between align-items-center">
+            <div
+              class="d-flex align-items-center"
+              onclick="window.history.back();"
+            >
+              <i class="fa fa-long-arrow-left"></i>
+              <span class="ml-1">Back</span>
+            </div>
+            <!-- <i class="fa fa-shopping-cart text-muted"></i> -->
+          </div>
+          <div class="mt-4 mb-3">
+            <span
+              class="text-uppercase text-muted brand"
+              id="product-brand"
+            ></span>
+            <h5 class="text-uppercase name" id="product-name"></h5>
+            <div class="price d-flex flex-row align-items-center">
+              <span class="act-price" id="product-price">₹ </span>
+              <div class="ml-2">
+                <small class="dis-price" id="product-discount-price">₹</small>
+                <span id="discount-off" class="discount">₹</span>
+              </div>
             </div>
           </div>
-        </div>
-        <p class="about" id="product-description">
-        </p>
-        <div class="cart mt-4 align-items-center">
-      <button class="btn btn-danger addtocart text-uppercase mr-2 px-4"
-        onclick="addToCart('${product.id}', '${product.name}', '${product.price}', '${product.image}', 1)">
-        Add to Cart
-      </button>
+          <p class="about" id="product-description"></p>
+          <div class="cart mt-4 align-items-center">
+            <button
+              class="btn btn-danger addtocart text-uppercase mr-2 px-4"
+              onclick="addToCart('₹{product.id}', '₹{product.name}', '₹{product.price}', '₹{product.image}', 1)"
+            >
+              Add to Cart
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- product end -->
-  <section id="sellers">
-    <div id="new-arrivals" class="seller container">
-      <h2>New Arrivals</h2>
-      <div class="best-seller"></div>
-    </div>
-  </section>
-<footer>
-  <div class="footer-container container">
-    <div class="content_1">
-      <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="Kashmir Dry Fruits Logo">
-      <p>Bringing you the finest selection of premium Kashmiri dry fruits, known for their unmatched quality and
-        authenticity. Our commitment to quality ensures you experience the true essence of Kashmir in every bite.</p>
-      <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="Accepted Payment Methods">
-    </div>
-
-    <div class="content_2">
-      <h4>SHOP OUR COLLECTION</h4>
-      <a href="#sellers">Kashmiri Walnuts</a>
-      <a href="#sellers">Almonds & Saffron</a>
-      <a href="#sellers">Dried Fruits & Berries</a>
-      <a href="#sellers">Gift Boxes</a>
-    </div>
-
-    <div class="content_3">
-      <h4>SUPPORT</h4>
-      <a href="#contact">Contact Us</a>
-      <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
-      <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery Information</a>
-      <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return & Exchange</a>
-    </div>
-
-    <div class="content_4">
-      <h4>SUBSCRIBE TO OUR NEWSLETTER</h4>
-      <p>Stay updated on our latest offerings of authentic Kashmiri dry fruits, seasonal collections, and exclusive
-        discounts!</p>
-      <div class="f-mail">
-        <input type="email" placeholder="Your Email">
-        <i class='bx bx-envelope'></i>
+    <!-- product end -->
+    <section id="sellers">
+      <div id="new-arrivals" class="seller container">
+        <h2>New Arrivals</h2>
+        <div class="best-seller"></div>
       </div>
-      <hr>
-    </div>
-  </div>
+    </section>
+    <footer>
+      <div class="footer-container container">
+        <div class="content_1">
+          <img
+            src="https://i.postimg.cc/htGyQ4JB/footer-logo.png"
+            alt="Kashmir Dry Fruits Logo"
+          />
+          <p>
+            Bringing you the finest selection of premium Kashmiri dry fruits,
+            known for their unmatched quality and authenticity. Our commitment
+            to quality ensures you experience the true essence of Kashmir in
+            every bite.
+          </p>
+          <img
+            src="https://i.postimg.cc/Nj9dgJ98/cards.png"
+            alt="Accepted Payment Methods"
+          />
+        </div>
 
-  <div class="contact-info">
-    <div class="head-txt">
-      <p>Contact us <a href="tel:+919541270349"><i class="bi bi-phone"></i> 7006541433</a></p>
-    </div>
-    <div class="sing_in_up">
-      <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank"><i
-          class="bi bi-instagram"></i></a>
-      <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-      <a href="mailto:kongposh06@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
-    </div>
-  </div>
+        <div class="content_2">
+          <h4>SHOP OUR COLLECTION</h4>
+          <a href="#sellers">Kashmiri Walnuts</a>
+          <a href="#sellers">Almonds & Saffron</a>
+          <a href="#sellers">Dried Fruits & Berries</a>
+          <a href="#sellers">Gift Boxes</a>
+        </div>
 
-  <div class="f-design">
-    <div class="f-design-txt container">
-      <p>Design and Developed By <a href="#">Musaib</a> | All rights reserved by <a href="https://duhasoftwares.com/"
-          target="_blank">Duha-Softwares</a></p>
-    </div>
-  </div>
-</footer>
+        <div class="content_3">
+          <h4>SUPPORT</h4>
+          <a href="#contact">Contact Us</a>
+          <a href="https://payment-method-sb.netlify.app/" target="_blank"
+            >Payment Method</a
+          >
+          <a href="https://delivery-status-sb.netlify.app/" target="_blank"
+            >Delivery Information</a
+          >
+          <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank"
+            >Return & Exchange</a
+          >
+        </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script deffer src="./singleProduct.js"></script>
-</body>
+        <div class="content_4">
+          <h4>SUBSCRIBE TO OUR NEWSLETTER</h4>
+          <p>
+            Stay updated on our latest offerings of authentic Kashmiri dry
+            fruits, seasonal collections, and exclusive discounts!
+          </p>
+          <div class="f-mail">
+            <input type="email" placeholder="Your Email" />
+            <i class="bx bx-envelope"></i>
+          </div>
+          <hr />
+        </div>
+      </div>
 
+      <div class="contact-info">
+        <div class="head-txt">
+          <p>
+            Contact us
+            <a href="tel:+917006541433" target="_blank">
+              <i class="bi bi-phone"></i> 7006541433
+            </a>
+            ||
+            <a href="tel:+917051807964" target="_blank">
+              <i class="bi bi-phone"></i> 7051807964
+            </a>
+          </p>
+        </div>
+        <div class="sign_in_up">
+          <a
+            href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm"
+            target="_blank"
+          >
+            <i class="bi bi-instagram"></i>
+          </a>
+          <a href="#" target="_blank">
+            <i class="bi bi-facebook"></i>
+          </a>
+          <a href="mailto:kongposh06@gmail.com">
+            <i class="bi bi-envelope-at-fill"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="f-design">
+        <div class="f-design-txt container">
+          <p>
+            Design and Developed By <a href="#">Musaib</a> | All rights reserved
+            by
+            <a href="https://duhasoftwares.com/" target="_blank"
+              >Duha-Softwares</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script deffer src="./singleProduct.js"></script>
+  </body>
 </html>
