--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 <footer>
     <div class="footer-container container">
         <div class="content_1">
-            <img src="https://i.postimg.cc/htGyQ4JB/footer-logo.png" alt="Kashmir Dry Fruits Logo">
+            <img src="assets/home/logo.PNG" alt="Kashmir Dry Fruits Logo">
             <p>Bringing you the finest selection of premium Kashmiri dry fruits, known for their unmatched quality and
                 authenticity. Our commitment to quality ensures you experience the true essence of Kashmir in every
                 bite.</p>
-            <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="Accepted Payment Methods">
+           
         </div>
 
         <div class="content_2">
