--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
       <div class="footer-container container">
         <div class="content_1">
           <img
-            src="https://i.postimg.cc/htGyQ4JB/footer-logo.png"
+            src="assets/home/logo.PNG"
             alt="Kashmir Dry Fruits Logo"
           />
           <p>
@@ -83,10 +83,6 @@
             to quality ensures you experience the true essence of Kashmir in
             every bite.
           </p>
-          <img
-            src="https://i.postimg.cc/Nj9dgJ98/cards.png"
-            alt="Accepted Payment Methods"
-          />
         </div>
 
         <div class="content_2">
