--- a/singleProduct.html
+++ b/singleProduct.html
@@ -76,13 +76,13 @@
       <div class="half2">
         <div class="product p-4">
           <div class="d-flex justify-content-between align-items-center">
-            <div
+            <!-- <div
               class="d-flex align-items-center"
               onclick="window.history.back();"
             >
               <i class="fa fa-long-arrow-left"></i>
-              <span class="ml-1">Back</span>
-            </div>
+              <span class="ml-1  btn btn-dark addtocart text-uppercase">Back</span>
+            </div> -->
             <!-- <i class="fa fa-shopping-cart text-muted"></i> -->
           </div>
           <div class="mt-4 mb-3">
@@ -122,7 +122,7 @@
       <div class="footer-container container">
         <div class="content_1">
           <img
-            src="https://i.postimg.cc/htGyQ4JB/footer-logo.png"
+            src="assets/home/logo.PNG"
             alt="Kashmir Dry Fruits Logo"
           />
           <p>
@@ -131,10 +131,6 @@
             to quality ensures you experience the true essence of Kashmir in
             every bite.
           </p>
-          <img
-            src="https://i.postimg.cc/Nj9dgJ98/cards.png"
-            alt="Accepted Payment Methods"
-          />
         </div>
 
         <div class="content_2">
