--- a/singleProduct.html
+++ b/singleProduct.html
@@ -1,9 +1,17 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KongPosh</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0">
+        <meta name="description"
+          content="Kongposh - Offering premium quality dry fruits, authentic Kashmiri saffron, spices, and honey sourced directly from the pristine valleys of Jammu and Kashmir, India.">
+        <meta name="keywords"
+          content="dry fruits, saffron, Kashmiri saffron, Kashmiri spices, honey, premium dry fruits Jammu and Kashmir, dry fruit shop India, buy saffron online, Kashmiri honey, exotic spices">
+        <meta name="author" content="Duha-Softwares">
+        <meta name="robots" content="index, follow">
+        <meta name="type" content="website">
+        <link rel="canonical" href="https://kongposh.co.in/">
     <link rel="stylesheet" href="./styles/sp.css" />
     <link
       rel="stylesheet"
